--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MathNet.Numerics" version="5.0.0" />
   <package id="Microsoft.MixedReality.QR" version="0.5.3037" />
   <package id="Microsoft.VCRTForwarders.140" version="1.0.7" />
 </packages>
