--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
+    "com.unity.vectorgraphics": "2.0.0-preview.24",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.openxr": "1.6.0",
