--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,22 +5,25 @@
     "com.microsoft.mixedreality.toolkit.extensions": "file:MixedReality/com.microsoft.mixedreality.toolkit.extensions-2.8.3.tgz",
     "com.microsoft.mixedreality.toolkit.foundation": "file:MixedReality/com.microsoft.mixedreality.toolkit.foundation-2.8.3.tgz",
     "com.microsoft.mixedreality.toolkit.standardassets": "file:MixedReality/com.microsoft.mixedreality.toolkit.standardassets-2.8.3.tgz",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.barracuda": "https://github.com/Unity-Technologies/barracuda-release.git",
-    "com.unity.collab-proxy": "2.0.1",
+    "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.18",
-    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.localization": "1.4.2",
-    "com.unity.render-pipelines.universal": "12.1.7",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.localization": "1.4.4",
+    "com.unity.render-pipelines.universal": "14.0.11",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "1.0.0",
     "com.unity.vectorgraphics": "2.0.0-preview.24",
-    "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.management": "4.2.1",
-    "com.unity.xr.openxr": "1.6.0",
+    "com.unity.visualscripting": "1.9.4",
+    "com.unity.xr.management": "4.4.0",
+    "com.unity.xr.oculus": "4.2.0",
+    "com.unity.xr.openxr": "1.10.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
