--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CSharp" version="4.7.0" />
   <package id="Microsoft.MixedReality.QR" version="0.5.3037" />
   <package id="Microsoft.VCRTForwarders.140" version="1.0.5" />
+  <package id="pythonnet" version="3.0.3" />
 </packages>
