--- a/Assets/plugins/Android/AndroidManifest.xml
+++ b/Assets/plugins/Android/AndroidManifest.xml
@@ -8,7 +8,9 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-
+	<!--features-->
+	<uses-feature android:name="oculus.software.overlay_keyboard" android:required="false"/>
+	
 	<application>
         <activity android:name="com.unity3d.player.UnityPlayerActivity"
                   android:theme="@style/UnityThemeSelector">
