--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -20,6 +20,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "1.0.0",
+    "com.unity.uiextensions": "https://github.com/Unity-UI-Extensions/com.unity.uiextensions.git",
     "com.unity.vectorgraphics": "2.0.0-preview.24",
     "com.unity.visualeffectgraph": "14.0.11",
     "com.unity.visualscripting": "1.9.4",
