--- a/Assets/plugins/Android/AndroidManifest.xml
+++ b/Assets/plugins/Android/AndroidManifest.xml
@@ -8,6 +8,8 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<!--features-->
 	<uses-feature android:name="oculus.software.overlay_keyboard" android:required="false"/>
 	
