changed network protocol to TCP to improve networking stability, added possibility to change networking protocol, added createMessage method to remove reliable riptide overhead from TCP messages, refined gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,11 @@ crashlytics-build.properties
 # imported examples
 /Assets/Packages
 /Assets/Packages.meta
+
+# specific ignores
+/Assets/StreamingAssets/*.svg
+/Assets/StreamingAssets/md/
+/Assets/Resources/FileNames.txt*
+/PythonEnv/
+/openbabel/
+/*build*/
